[tool.poetry]
name = "textual-dev"
version = "1.2.1"
homepage = "https://github.com/Textualize/textual-dev"
description = "Development tools for working with Textual"
authors = ["Will McGugan <will@textualize.io>", "Dave Pearson <dave@textualize.io>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
include = [
    "src/textual_dev/py.typed",
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
textual = ">=0.33.0"
aiohttp = ">=3.8.1"
click = ">=8.1.2"
msgpack = ">=1.0.3"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^23.1.0"
pre-commit = "^2.13.0"
isort = "^5.11.0"
pylint = "*"
mypy = "*"
time-machine = "^2.6.0"
pytest-aiohttp = "^1.0.4"
msgpack-types = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
textual = "textual_dev.cli:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
]

[tool.mypy]
implicit_reexport = false
